# bp

./: .gitignore  COMMENTS.md  README.md  pyproject.toml  requirements.txt
app/: game.py  main.py
tests/: game_rules_test.py
