[project]
name = "banco-imobiliario-simulador"
version = "0.1.0"
description = "API FastAPI para simular um jogo simplificado no estilo Banco Imobiliario."
readme = "COMMENTS.md"
requires-python = ">=3.11,<4.0"
authors = [{ name = "Desafio Tecnico" }]
dependencies = [
    "fastapi>=0.138.1,<0.139.0",
    "uvicorn[standard]>=0.49.0,<0.50.0",
]

[tool.poetry]
packages = [{ include = "app" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
