[project]
name = "banco-imobiliario-simulador"
version = "0.1.0"
description = "API FastAPI para simular um jogo simplificado no estilo Banco Imobiliário."
readme = "COMMENTS.md"
requires-python = ">=3.11,<4.0"
authors = [
    {name = "Pedro Hirschle",email = "pedrohirschle@outlook.com"}
]
dependencies = [
    "fastapi>=0.138.1,<0.139.0",
    "uvicorn[standard]>=0.49.0,<0.50.0",
]

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
